@@ -20,10 +20,10 @@ package com.guardtime.ksi;
 
 import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.hashing.DataHash;
-import com.guardtime.ksi.service.KSIExtendingService;
 import com.guardtime.ksi.publication.PublicationData;
 import com.guardtime.ksi.publication.PublicationsFile;
 import com.guardtime.ksi.publication.inmemory.InMemoryPublicationsFileFactory;
+import com.guardtime.ksi.service.KSIExtendingService;
 import com.guardtime.ksi.service.client.KSIExtenderClient;
 import com.guardtime.ksi.service.client.KSIServiceCredentials;
 import com.guardtime.ksi.tlv.TLVInputStream;
@@ -76,9 +76,13 @@ public final class TestUtil extends CommonTestUtil {
     }
 
     public static VerificationContext buildContext(KSISignature signature, KSI ksi, KSIExtendingService extendingService, DataHash documentHash) throws Exception {
+        return buildContext(signature, ksi, extendingService, documentHash, 0L);
+    }
+
+    public static VerificationContext buildContext(KSISignature signature, KSI ksi, KSIExtendingService extendingService, DataHash documentHash, long level) throws Exception {
         VerificationContextBuilder builder = new VerificationContextBuilder();
         builder.setSignature(signature).setPublicationsFile(ksi.getPublicationsFile()).setExtendingService(extendingService);
-        return builder.setDocumentHash(documentHash).build();
+        return builder.setDocumentHash(documentHash, level).build();
     }
 
     public static VerificationContext buildContext(KSISignature signature, KSI ksi, KSIExtenderClient extenderClient, DataHash documentHash) throws Exception {
